fix alignment of lists

--- a/css/styles.css
+++ b/css/styles.css
@@ -317,17 +317,14 @@ content.tech {
   color: white;
   padding-top: 10px;
   margin-bottom: 0; }
-
-.tech-icons {
-  padding-right: 5px;
-  padding-left: 5px; }
-
-.tech-icons-wrapper {
-  padding-bottom: 5px; }
-
-.tech-list-title {
-  padding-top: 25px;
-  padding-bottom: 20px; }
+  content.tech .tech-icons {
+    padding-right: 5px;
+    padding-left: 5px; }
+  content.tech .tech-icons-wrapper {
+    padding-bottom: 5px; }
+  content.tech .tech-list-title {
+    padding-top: 25px;
+    padding-bottom: 20px; }
 
 .contact {
   color: #0f993e;
